--- a/build
+++ b/build
@@ -8,7 +8,7 @@ lunch spark_ysl-user
 mka api-stubs-docs || echo no problem, we need ccache
 mka system-api-stubs-docs || echo no problem we need ccache
 mka test-api-stubs-docs || echo no problem, we need ccache
-make sepolicy & # dont remove that '&'
+make Sparky & # dont remove that '&'
 #sleep 80m
 and dont use below codes for first 1 or 2 times, to get ccache uploaded,
 
